[vividus] Change priority of encryptor password from environment variable to highest (#4284)